--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div
                 class="formData"
+                id="city"
                 >
                 <input
                   class="checkbox-input"
@@ -215,7 +216,9 @@
                 <input
                   class="checkbox-input"
                   type="checkbox"
+                  name="checkbox1"
                   id="checkbox1"
+                  value="checkbox1"
                   required
                   checked
                 />
@@ -224,7 +227,13 @@
                   J'ai lu et accepté les conditions d'utilisation.
                 </label><div id="checkbox-error"></div>  
                 <br>
-                <input class="checkbox-input" type="checkbox" id="checkbox2" />
+                <input 
+                class="checkbox-input" 
+                type="checkbox" 
+                name="checkbox2"
+                id="checkbox2"
+                value="checkbox2"
+                />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
                   Je souhaite être prévenu des prochains évènements.
@@ -235,7 +244,7 @@
                 type="submit"
                 class="button"
                 value="C'est parti"
-                onclick="myValidator(); checkButton(); checkCheckbox();"
+                onclick="checkAll(); checkButton(); checkCheckbox();"
               />
             </form>
           </div>
